--- a/app/src/main/res/layout/base_fragment.xml
+++ b/app/src/main/res/layout/base_fragment.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <import type="android.view.View" />
 
         <variable
-            name="isLoading"
-            type="Boolean" />
+            name="state"
+            type="com.example.weatherapp.model.State" />
 
-        <variable
-            name="isError"
-            type="Boolean" />
-
-        <variable
-            name="message"
-            type="String" />
     </data>
 
     <FrameLayout
@@ -28,14 +22,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:visibility="@{isError ? View.GONE : View.VISIBLE}" />
+            android:visibility="@{state.isError() ? View.GONE : View.VISIBLE}"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/mobile_navigation" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{state.isLoading() ? View.VISIBLE : View.GONE}" />
 
         <TextView
             android:id="@+id/error_text"
@@ -43,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@{message}"
-            android:visibility="@{isError ?  View.VISIBLE : View.GONE}" />
+            android:text="@{state.message}"
+            android:visibility="@{state.isError() ?  View.VISIBLE : View.GONE}" />
     </FrameLayout>
 </layout>
