Optimised code , added some documentation and few dependencies to support navigation.

--- a/app/src/main/res/layout/base_fragment.xml
+++ b/app/src/main/res/layout/base_fragment.xml
@@ -18,7 +18,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment"
-            android:name="com.example.weatherapp.ui.BaseFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -41,5 +41,6 @@
             android:gravity="center"
             android:text="@{state.message}"
             android:visibility="@{state.isError() ?  View.VISIBLE : View.GONE}" />
+
     </FrameLayout>
 </layout>
