--- a/app/src/main/res/layout/weather_activity.xml
+++ b/app/src/main/res/layout/weather_activity.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="android.view.View" />
+
         <variable
             name="state"
             type="com.example.weatherapp.model.State" />
 
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,5 +20,5 @@
             android:id="@+id/base_container"
             layout="@layout/base_fragment"
             app:state="@{state}" />
-    </LinearLayout>
+    </FrameLayout>
 </layout>
